# aimario

./: .gitignore
AIMario.Assembly.Snes/: Makefile  a.out  cybermario.map  cybermario.sfc  ld65.cfg  test.dbg  test.map  test.sfc  test_joypad.sfc
AIMario.Assembly.Snes/data/: bg_tiles.asm  hud_tiles.asm  level_1_1.asm  level_blocks.asm  metatiles.asm  palettes.asm  sprite_tiles.asm
AIMario.Assembly.Snes/include/: constants.inc  ram.inc
AIMario.Assembly.Snes/src/: camera.asm  collision.asm  header.asm  hud.asm  init.asm  items.asm  joypad.asm  level.asm  main.asm  mario.asm  physics.asm  ram.asm  sprites.asm  test_display.asm  test_func.asm  test_joypad.asm  tiles.asm
AIMario.Assembly.SnesV2/: Makefile  README.md  aimario_v2.sfc
AIMario.Assembly.SnesV2/data/: bg_tiles.asm  hud_tiles.asm  level_1_1.asm  metatiles.asm  palettes.asm  (+1 more)
AIMario.CPlusPlus/: CMakeLists.txt
AIMario.CPlusPlus/src/: collision.cpp  collision.h  constants.h  enemies.cpp  enemies.h  fireball.cpp  fireball.h  hud.cpp  hud.h  items.cpp  items.h  level.cpp  level.h  level_data.cpp  level_data.h  main.cpp  mario.cpp  mario.h  sprites.cpp  sprites.h  title_screen.cpp  title_screen.h  types.h
AIMario.CSharp/: AIMario.CSharp.sln  MarioGame.cs  Program.cs  README.md  app.manifest
AIMario.Lisp/: README.md  aimario.asd  camera.lisp  constants.lisp  enemies.lisp  fireball.lisp  game-state.lisp  hud.lisp  input.lisp  items.lisp  level-data.lisp  level.lisp  main.lisp  mario.lisp  package.lisp  physics.lisp  sprites.lisp  tiles.lisp  title-screen.lisp  utils.lisp
AIMario.Rust/: Cargo.toml
(+61 files in other folders)
